[gd_scene load_steps=8 format=3 uid="uid://q84ddoxkffpr"]

[ext_resource type="Script" path="res://SystemDiagnostics/system_diagnostics.gd" id="1_3n2lh"]
[ext_resource type="Texture2D" uid="uid://chcu6ns5nt552" path="res://minigames/elektron/Elements-01.png" id="2_0v2os"]
[ext_resource type="FontFile" uid="uid://47e1nbgxk5y2" path="res://minigames/elektron/diffusion-bold.ttf" id="3_p2jo0"]
[ext_resource type="Texture2D" uid="uid://c8a22k8uyoemf" path="res://minigames/elektron/GUI.png" id="4_xxppf"]
[ext_resource type="Theme" uid="uid://v4j386rauj8p" path="res://minigames/elektron/ButtonTheme.tres" id="5_70qvk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_88l3h"]
texture = ExtResource("2_0v2os")
region_rect = Rect2(226, 2184, 1014, 350.93)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3w5jo"]
texture = ExtResource("4_xxppf")
region_rect = Rect2(98.1706, 38.3924, 21.9209, 20.2696)

[node name="SystemDiagnostics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -956.0
offset_top = -544.0
offset_right = -956.0
offset_bottom = -544.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3n2lh")
metadata/_edit_horizontal_guides_ = [-543.0, 541.0]
metadata/_edit_vertical_guides_ = [-969.0, 963.0]

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -114.0
offset_top = -51.0
offset_right = 1985.0
offset_bottom = 1167.0
theme_override_styles/panel = SubResource("StyleBoxTexture_88l3h")

[node name="SystemDiagnostics" type="Label" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 620.0
offset_right = 807.0
offset_bottom = 710.0
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 50
text = "System Diagnostics"
horizontal_alignment = 1

[node name="DecodeMessagesBackground" type="Panel" parent="."]
offset_left = 1245.0
offset_top = 192.0
offset_right = 1739.0
offset_bottom = 537.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3w5jo")

[node name="FrequencyTuningBackground" type="Panel" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 198.0
offset_right = 723.0
offset_bottom = 551.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3w5jo")

[node name="SystemDiagnosticsBackground" type="Panel" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 704.0
offset_right = 1682.0
offset_bottom = 987.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3w5jo")

[node name="SendUpdatesButton" type="Button" parent="SystemDiagnosticsBackground"]
layout_mode = 0
offset_left = 1013.0
offset_top = 69.0
offset_right = 1428.0
offset_bottom = 217.0
theme = ExtResource("5_70qvk")
theme_override_font_sizes/font_size = 40
text = "SEND UPDATES"

[node name="StatusGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 733.0
offset_right = 814.0
offset_bottom = 1038.0
columns = 2

[node name="OxygenLabel" type="Label" parent="StatusGrid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 50
text = "Oxygen System"
horizontal_alignment = 1

[node name="OxygenIndicator" type="ColorRect" parent="StatusGrid"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
color = Color(0.8, 0.2, 0.2, 1)

[node name="NavigationLabel" type="Label" parent="StatusGrid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 50
text = "Navigation System  "
horizontal_alignment = 1

[node name="NavigationIndicator" type="ColorRect" parent="StatusGrid"]
custom_minimum_size = Vector2(5, 30)
layout_mode = 2
color = Color(0.8, 0.2, 0.2, 1)

[node name="Fuel SystemLabel" type="Label" parent="StatusGrid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 50
text = "Fuel System  "
horizontal_alignment = 1

[node name="FuelSystemIndicator" type="ColorRect" parent="StatusGrid"]
custom_minimum_size = Vector2(5, 30)
layout_mode = 2
color = Color(0.8, 0.2, 0.2, 1)

[node name="ReturnToShipLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 1020.0
offset_right = 334.0
offset_bottom = 1055.0
theme_override_font_sizes/font_size = 25
text = "Press 'E' to return to Ship"

[node name="FrequencyTuning" type="Label" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 212.0
offset_right = 720.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 40
text = "Frequency Tuning"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(965, 538)
zoom = Vector2(1.005, 1.005)

[node name="MissionControl" type="Label" parent="."]
layout_mode = 0
offset_left = 667.0
offset_top = 44.0
offset_right = 1271.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 50
text = "Mission Control"
horizontal_alignment = 1

[node name="DecodeMessages" type="Label" parent="."]
offset_left = 1176.0
offset_top = 205.0
offset_right = 1780.0
offset_bottom = 284.0
theme_override_fonts/font = ExtResource("3_p2jo0")
theme_override_font_sizes/font_size = 40
text = "Decode Messages"
horizontal_alignment = 1
